--- a/main.html
+++ b/main.html
@@ -9,9 +9,9 @@
 <body>
 	 <nav>
       <ul>
-        <li><a href="">Home</a></li>
-        <li><a href="">About Us</a></li>
-        <li><a href="">Contact Us</a></li>
+        <a href="">Home</a>
+        <a href="">About Us</a>
+        <a href="">Contact Us</a>
       </ul>
     </nav>
     <audio controls autoplay>
@@ -19,14 +19,14 @@
         src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3"
         type="audio/mpeg"
       />
-      Your browser does not support the audio element.
+     
     </audio>
     <audio controls autoplay>
       <source
         src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3"
         type="audio/mpeg"
       />
-      Your browser does not support the audio element.
+      
     </audio>
     <audio controls autoplay>
       <source
