--- a/main.html
+++ b/main.html
@@ -9,9 +9,11 @@
 <body>
 	 <nav>
       <ul>
-        <a href="https://course.acciojob.com/web-idle?question=5996f997-e577-4a36-8ead-a0aeff480821">Home</a>
-        <a href="https://course.acciojob.com/open-web-editor?question=5996f997-e577-4a36-8ead-a0aeff480821">About Us</a>
-        <a href="https://course.acciojob.com/modules">Contact Us</a>
+		<li>
+	        <a href="">Home</a></li>
+	       <li> <a href="">About Us</a></li>
+	       <li> <a href="">Contact Us</a>
+	  </li>
       </ul>
     </nav>
 	<h1>3 random audios</h1>
