--- a/main.html
+++ b/main.html
@@ -16,6 +16,7 @@
 	  </li>
       </ul>
     </nav>
+	<main>
 	<h1>3 random audios</h1>
     <audio controls autoplay>
       <source
@@ -39,6 +40,7 @@
         type="audio/ogg"
       />
     </audio>
+	</main>		
 </script>
 
 </body>
